# sparkling-graffito

./: .clang-format  .env  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Graffito.cpp.64FEA2B90461AC44.idx
cmake/: SparklingGraffitoConfig.cmake.in
include/SparklingGraffito/: Graffito.hpp
src/: Graffito.cpp
test/: CMakeLists.txt  test_rep.cpp  test_req.cpp
